# MPS-OPRF-MPSI

./: CMakeLists.txt  readme.md
frontend/: main.cpp  perf_network.cpp
include/: BicentricMpsi.h  CoinToss.h  HomomorphicPRF.h  MpsOprf.h  RandomOracle.h  RingMpsi.h  SecretShare.h  SimplePRF.h  VoleWrapper.h
scripts/: build_all.sh  build_offline.sh  config.sh  parse_results.sh  run_benchmark.sh  run_table5.sh  setup_network.sh  setup_ubuntu.sh
src/: BicentricMpsi.cpp  CoinToss.cpp  HomomorphicPRF.cpp  MpsOprf.cpp  RandomOracle.cpp  RingMpsi.cpp  SecretShare.cpp  SimplePRF.cpp  VoleWrapper.cpp
tests/: BicentricMpsi_Tests.cpp  CoinToss_Tests.cpp  Correctness_Tests.cpp  E2E_Diagnostic.cpp  MpsOprf_Tests.cpp  Performance_Tests.cpp  Performance_Tests_BZS.cpp  Performance_Tests_Large.cpp  Performance_Tests_Protocols.cpp  RingMpsi_Tests.cpp  Security_Tests.cpp  SimplePRF_Tests.cpp  VoleWrapper_Tests.cpp  build_correctness_test.sh  build_simple_test.sh  correctness_test  debug_test.cpp  debug_test2.cpp  main_tests.cpp  simple_prf_test
